# NSUlabs

./: .gitignore  README.md
CompMath/: README.md
CompMath/lab1.CubeEquation/: pom.xml
CompMath/lab2.Integration/: pom.xml
CompMath/lab3.Newton_s method/: Newton_s Method.xlsx
CompMath/lab4.SweepMethod/: pom.xml
CompMath/lab5.JacobiSeidelMethod/: JacobiSeidelMethod.xlsx
CompMath/lab6.DifferentialEquation/: DifferentialEquation.xlsx
DB/: README.md
DB/LibreOffice projects/: Notebook-description.docx  Notebook.odb  University.odb
DB/Queries/: HR1_21210_Leontev.docx  HR2_21210_Leontev.docx
EVM/: README.md  lab1-2.docx  lab3.docx  lab4.docx  lab5.docx  lab6.docx  lab7.docx  lab8.docx  lab9.docx
MTK/: README.md
MathStat/: CalculationWork.xlsx  README.md
Network1/: Nat.pkt  R.I.P.pkt  README.md  arp.pkt  vlan.pkt
Network2/: README.md
OOP/: README.md
OOP/lab1-BigInt/: CMakeLists.txt
OOP/lab1-BigInt/main/: main.cpp
OOP/lab2-DilemmaOfPrisoner/: BadMan.cpp  BadMan.h  CMakeLists.txt  Choice.h  CrazyMan.cpp  CrazyMan.h  Factory.cpp  Factory.h  Game.cpp  Game.h  GoodMan.cpp  GoodMan.h  IStrategy.h  MimicMan.cpp  MimicMan.h  Mode.h  TrickyMan.cpp  TrickyMan.h  WiseMan.cpp  WiseMan.h  main.cpp
OOP/lab3-SoundProcessor/: CMakeLists.txt  Config.h  Factory.cpp  Factory.h  IConverter.h  Mix.cpp  Mix.h  Mute.cpp  Mute.h  Pars.cpp  Pars.h  Reverse.cpp  Reverse.h  SoundProcessor.cpp  SoundProcessor.h  WAVContainer.h  main.cpp
OPP/: README.md  lab1.docx  lab2.docx  lab3.docx  lab4.docx  lab5.c
OS1/: README.md
OS2/: README.md
SMGMO/: README.md
(+236 files in other folders)
